--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,11 +33,12 @@
     "@fathym/eac-dfs": "jsr:@fathym/eac-dfs@0",
     "@fathym/ioc": "jsr:@fathym/ioc@0",
     "@nats": "npm:nats@2.29.3",
-    "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
-    "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
-    "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
-    "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
-    "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
+    "@o-industrial/common": "jsr:@o-industrial/common",
+    // "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
+    // "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
+    // "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
+    // "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
+    // "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
     "@std/assert": "jsr:@std/assert@1.0.6",
     "@std/log": "jsr:@std/log@0.224.6"
   },
