--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,7 +33,7 @@
     "@fathym/eac-dfs": "jsr:@fathym/eac-dfs@0",
     "@fathym/ioc": "jsr:@fathym/ioc@0",
     "@nats": "npm:nats@2.29.3",
-    "@o-industrial/common": "jsr:@o-industrial/common",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.4",
     // "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
     // "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
     // "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
