--- a/deno.jsonc
+++ b/deno.jsonc
@@ -32,35 +32,35 @@
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.17",
     "@fathym/ioc": "jsr:@fathym/ioc@0",
     "@nats": "npm:nats@2.29.3",
-    // "@o-industrial/common": "jsr:@o-industrial/common@0.0.18",
-    "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
-    "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
-    "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
-    "@o-industrial/common/atomic/organisms": "../open-industrial-reference-architecture/atomic/organisms/.exports.ts",
-    "@o-industrial/common/atomic/templates": "../open-industrial-reference-architecture/atomic/templates/.exports.ts",
-    "@o-industrial/common/atomic/utils": "../open-industrial-reference-architecture/atomic/utils/.exports.ts",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.18",
+    // "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
+    // "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
+    // "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
+    // "@o-industrial/common/atomic/organisms": "../open-industrial-reference-architecture/atomic/organisms/.exports.ts",
+    // "@o-industrial/common/atomic/templates": "../open-industrial-reference-architecture/atomic/templates/.exports.ts",
+    // "@o-industrial/common/atomic/utils": "../open-industrial-reference-architecture/atomic/utils/.exports.ts",
 
-    "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
-    "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
-    "@o-industrial/common/secrets": "../open-industrial-reference-architecture/src/secrets/.exports.ts",
-    "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
-    "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
-    "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
+    // "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
+    // "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
+    // "@o-industrial/common/secrets": "../open-industrial-reference-architecture/src/secrets/.exports.ts",
+    // "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
+    // "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
+    // "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
 
-    "@o-industrial/common/flow": "../open-industrial-reference-architecture/src/flow/.exports.ts",
+    // "@o-industrial/common/flow": "../open-industrial-reference-architecture/src/flow/.exports.ts",
 
-    "@o-industrial/common/fluent": "../open-industrial-reference-architecture/src/fluent/_/.exports.ts",
-    "@o-industrial/common/fluent/connections": "../open-industrial-reference-architecture/src/fluent/connections/.exports.ts",
-    "@o-industrial/common/fluent/packs": "../open-industrial-reference-architecture/src/fluent/packs/.exports.ts",
-    "@o-industrial/common/fluent/runtimes": "../open-industrial-reference-architecture/src/fluent/runtimes/.exports.ts",
-    "@o-industrial/common/fluent/simulators": "../open-industrial-reference-architecture/src/fluent/simulators/.exports.ts",
-    "@o-industrial/common/fluent/steps": "../open-industrial-reference-architecture/src/fluent/steps/.exports.ts",
-    "@o-industrial/common/fluent/types": "../open-industrial-reference-architecture/src/fluent/types/.exports.ts",
-    "@o-industrial/common/fluent/utils": "../open-industrial-reference-architecture/src/fluent/utils/.exports.ts",
-    "@o-industrial/common/fluent/workspaces": "../open-industrial-reference-architecture/src/fluent/workspaces/.exports.ts",
+    // "@o-industrial/common/fluent": "../open-industrial-reference-architecture/src/fluent/_/.exports.ts",
+    // "@o-industrial/common/fluent/connections": "../open-industrial-reference-architecture/src/fluent/connections/.exports.ts",
+    // "@o-industrial/common/fluent/packs": "../open-industrial-reference-architecture/src/fluent/packs/.exports.ts",
+    // "@o-industrial/common/fluent/runtimes": "../open-industrial-reference-architecture/src/fluent/runtimes/.exports.ts",
+    // "@o-industrial/common/fluent/simulators": "../open-industrial-reference-architecture/src/fluent/simulators/.exports.ts",
+    // "@o-industrial/common/fluent/steps": "../open-industrial-reference-architecture/src/fluent/steps/.exports.ts",
+    // "@o-industrial/common/fluent/types": "../open-industrial-reference-architecture/src/fluent/types/.exports.ts",
+    // "@o-industrial/common/fluent/utils": "../open-industrial-reference-architecture/src/fluent/utils/.exports.ts",
+    // "@o-industrial/common/fluent/workspaces": "../open-industrial-reference-architecture/src/fluent/workspaces/.exports.ts",
     
-    "@o-industrial/common/packs/azure-iot": "../open-industrial-reference-architecture/src/packs/azure-iot/.pack.ts",
-    "@o-industrial/common/packs/oi-core": "../open-industrial-reference-architecture/src/packs/oi-core/.pack.ts",
+    // "@o-industrial/common/packs/azure-iot": "../open-industrial-reference-architecture/src/packs/azure-iot/.pack.ts",
+    // "@o-industrial/common/packs/oi-core": "../open-industrial-reference-architecture/src/packs/oi-core/.pack.ts",
 
     "@std/assert": "jsr:@std/assert@1.0.6",
     "@std/log": "jsr:@std/log@0.224.6"
