--- a/deno.jsonc
+++ b/deno.jsonc
@@ -28,12 +28,14 @@
   "imports": {
     "@fathym/common": "jsr:@fathym/common@0.2.265",
     "@fathym/eac": "jsr:@fathym/eac@0.2.113",
-    "@fathym/eac-applications": "jsr:@fathym/eac-applications@0.0.153",
-    "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.82",
-    "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.18",
+    "@fathym/eac-applications": "jsr:@fathym/eac-applications@0.0.154",
+    "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.90",
+    "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.19",
+    "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.21",
+    "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.34",
     "@fathym/ioc": "jsr:@fathym/ioc@0",
     "@nats": "npm:nats@2.29.3",
-    "@o-industrial/common": "jsr:@o-industrial/common@0.0.89",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.95",
     "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
     "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
     "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
