--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,7 +33,7 @@
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.20",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.22",
     "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.44",
-    // "@fathym/eac-licensing/steward/plugins": "../../fathym-deno/eac-licensing/src/steward/plugins/.exports.ts",
+    "@fathym/eac-licensing/steward/plugins": "../../fathym-deno/eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0",
     "@nats": "npm:nats@2.29.3",
     // "@fathym/eac-azure/steward/plugins": "../../fathym-deno/eac-azure/src/steward/plugins/.exports.ts",
