--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,11 +33,11 @@
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.21",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.23",
     "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.47",
-    // "@fathym/eac-licensing/steward/plugins": "../../fathym-deno/eac-licensing/src/steward/plugins/.exports.ts",
+    "@fathym/eac-licensing/steward/plugins": "../../fathym-deno/eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
     "@nats": "npm:nats@2.29.3",
     // "@fathym/eac-azure/steward/plugins": "../../fathym-deno/eac-azure/src/steward/plugins/.exports.ts",
-    "@o-industrial/common": "jsr:@o-industrial/common@0.0.226",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.248-integration",
     // "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
     // "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
     // "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
