--- a/deno.jsonc
+++ b/deno.jsonc
@@ -7,6 +7,10 @@
   },
   "license": "MIT",
   "tasks": {
+    "test:unit": "npx rimraf cov && deno test -A tests/**/*.unit.ts --coverage=cov && deno coverage cov --lcov --output=cov/lcov.info",
+    "test:int": "npx rimraf cov && deno test -A tests/**/*.int.ts --coverage=cov && deno coverage cov --lcov --output=cov/lcov.info",
+    "coverage:check": "deno run -A scripts/coverage-threshold.ts --path=cov/lcov.info --minLines=75",
+
     "build": "deno task build:fmt && deno task build:lint && deno task publish:check && deno task test",
     "build:dev": "deno run -A dev.ts build",
     "build:docker": "docker build --no-cache -t open-industrial-api-runtime -f DOCKERFILE .",
@@ -22,7 +26,7 @@
     "publish:check": "deno publish --dry-run --allow-dirty",
     "refresh:docker": "npx rimraf cov && deno task build:docker && deno task network:docker && deno task clean:docker && deno task deploy:docker",
     "start": "deno run -A main.ts",
-    "test": "npx rimraf cov && deno test -A tests/tests.ts --coverage=cov",
+    "test": "npx rimraf cov && deno test -A tests/**/*.tests.ts --coverage=cov && deno coverage cov --lcov --output=cov/lcov.info",
     "version": "deno run -A jsr:@fathym/common@0/build/version"
   },
   "imports": {
@@ -101,5 +105,9 @@
     "useTabs": false
   },
   "unstable": ["kv"],
-  "lock": false
+  "lock": false,
+  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" }
 }
+
+
+
