--- a/deno.jsonc
+++ b/deno.jsonc
@@ -36,8 +36,11 @@
     "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.105",
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.21",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.23",
-    "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.52",
-    // "@fathym/eac-licensing/steward/plugins": "../../fathym-deno/eac-licensing/src/steward/plugins/.exports.ts",
+    // "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.52",
+    "@fathym/eac-licensing": "../eac-licensing/src/licensing/.exports.ts",
+    "@fathym/eac-licensing/clients": "../eac-licensing/src/clients/.exports.ts",
+    "@fathym/eac-licensing/steward/api": "../eac-licensing/src/steward/api/.exports.ts",
+    "@fathym/eac-licensing/steward/plugins": "../eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
     "@nats": "npm:nats@2.29.3",
     // "@fathym/eac-azure/steward/plugins": "../../fathym-deno/eac-azure/src/steward/plugins/.exports.ts",
