--- a/deno.jsonc
+++ b/deno.jsonc
@@ -33,6 +33,7 @@
     "@fathym/common": "jsr:@fathym/common@0.2.266",
     "@fathym/eac": "jsr:@fathym/eac@0.2.119",
     "@fathym/eac-applications": "jsr:@fathym/eac-applications@0.0.178-hot-swap",
+    "@fathym/eac-applications/steward/plugins": "../../fathym-deno/eac-applications/src/steward/plugins/.exports.ts",
     "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.105",
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.21",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.23",
