--- a/deno.jsonc
+++ b/deno.jsonc
@@ -38,14 +38,14 @@
     // "@fathym/eac-azure/steward/plugins": "../../fathym-deno/eac-azure/src/steward/plugins/.exports.ts",
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.21",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.23",
-    // "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.53",
-    "@fathym/eac-licensing": "../eac-licensing/src/licensing/.exports.ts",
-    "@fathym/eac-licensing/clients": "../eac-licensing/src/clients/.exports.ts",
-    "@fathym/eac-licensing/steward/api": "../eac-licensing/src/steward/api/.exports.ts",
-    "@fathym/eac-licensing/steward/plugins": "../eac-licensing/src/steward/plugins/.exports.ts",
+    "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.54",
+    // "@fathym/eac-licensing": "../eac-licensing/src/licensing/.exports.ts",
+    // "@fathym/eac-licensing/clients": "../eac-licensing/src/clients/.exports.ts",
+    // "@fathym/eac-licensing/steward/api": "../eac-licensing/src/steward/api/.exports.ts",
+    // "@fathym/eac-licensing/steward/plugins": "../eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
     "@nats": "npm:nats@2.29.3",
-    "@o-industrial/common": "jsr:@o-industrial/common@0.0.285",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.286",
     // "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
     // "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
     // "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
