--- a/deno.jsonc
+++ b/deno.jsonc
@@ -32,8 +32,22 @@
   "imports": {
     "@fathym/common": "jsr:@fathym/common@0.2.266",
     "@fathym/eac": "jsr:@fathym/eac@0.2.119",
-    "@fathym/eac-applications": "jsr:@fathym/eac-applications@0.0.178-hot-swap",
-    // "@fathym/eac-applications/steward/plugins": "../../fathym-deno/eac-applications/src/steward/plugins/.exports.ts",
+    "@fathym/eac-applications": "jsr:@fathym/eac-applications@0.0.186",
+    // "@fathym/eac-applications": "../eac-applications/src/applications/.exports.ts",
+    // "@fathym/eac-applications/modifiers": "../eac-applications/src/applications/modifiers/.exports.ts",
+    // "@fathym/eac-applications/preact": "../eac-applications/src/preact/.exports.ts",
+    // "@fathym/eac-applications/processors": "../eac-applications/src/applications/processors/.exports.ts",
+    // "@fathym/eac-applications/runtime": "../eac-applications/src/runtime/_/.exports.ts",
+    // "@fathym/eac-applications/runtime/islands": "../eac-applications/src/runtime/islands/.exports.ts",
+    // "@fathym/eac-applications/runtime/logging": "../eac-applications/src/runtime/logging/.exports.ts",
+    // "@fathym/eac-applications/runtime/modifiers": "../eac-applications/src/runtime/modifiers/.exports.ts",
+    // "@fathym/eac-applications/runtime/modules": "../eac-applications/src/runtime/modules/.exports.ts",
+    // "@fathym/eac-applications/runtime/plugins": "../eac-applications/src/runtime/plugins/.exports.ts",
+    // "@fathym/eac-applications/runtime/processors": "../eac-applications/src/runtime/processors/.exports.ts",
+    // "@fathym/eac-applications/runtime/refresh": "../eac-applications/src/runtime/refresh/.exports.ts",
+    // "@fathym/eac-applications/steward/api": "../eac-applications/src/steward/api/.exports.ts",
+    // "@fathym/eac-applications/steward/plugins": "../eac-applications/src/steward/plugins/.exports.ts",
+    // "@fathym/eac-applications/utils": "../eac-applications/src/utils/.exports.ts",
     "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.105",
     // "@fathym/eac-azure/steward/plugins": "../../fathym-deno/eac-azure/src/steward/plugins/.exports.ts",
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.21",
@@ -45,7 +59,7 @@
     // "@fathym/eac-licensing/steward/plugins": "../eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
     "@nats": "npm:nats@2.29.3",
-    "@o-industrial/common": "jsr:@o-industrial/common@0.0.286",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.288",
     // "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
     // "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
     // "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
