--- a/deno.jsonc
+++ b/deno.jsonc
@@ -49,13 +49,13 @@
     // "@fathym/eac-applications/steward/api": "../eac-applications/src/steward/api/.exports.ts",
     // "@fathym/eac-applications/steward/plugins": "../eac-applications/src/steward/plugins/.exports.ts",
     // "@fathym/eac-applications/utils": "../eac-applications/src/utils/.exports.ts",
-    // "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.109",
-    "@fathym/eac-azure": "../eac-azure/src/azure/.exports.ts",
-    "@fathym/eac-azure/api": "../eac-azure/src/api/.exports.ts",
-    "@fathym/eac-azure/steward/api": "../eac-azure/src/steward/api/.exports.ts",
-    "@fathym/eac-azure/steward/clients": "../eac-azure/src/steward/clients/.exports.ts",
-    "@fathym/eac-azure/steward/plugins": "../eac-azure/src/steward/plugins/.exports.ts",
-    "@fathym/eac-azure/utils": "../eac-azure/src/utils/.exports.ts",
+    "@fathym/eac-azure": "jsr:@fathym/eac-azure@0.0.110",
+    // "@fathym/eac-azure": "../eac-azure/src/azure/.exports.ts",
+    // "@fathym/eac-azure/api": "../eac-azure/src/api/.exports.ts",
+    // "@fathym/eac-azure/steward/api": "../eac-azure/src/steward/api/.exports.ts",
+    // "@fathym/eac-azure/steward/clients": "../eac-azure/src/steward/clients/.exports.ts",
+    // "@fathym/eac-azure/steward/plugins": "../eac-azure/src/steward/plugins/.exports.ts",
+    // "@fathym/eac-azure/utils": "../eac-azure/src/utils/.exports.ts",
     "@fathym/eac-deno-kv": "jsr:@fathym/eac-deno-kv@0.0.23",
     "@fathym/eac-iot": "jsr:@fathym/eac-iot@0.0.25",
     "@fathym/eac-licensing": "jsr:@fathym/eac-licensing@0.0.56",
@@ -65,36 +65,36 @@
     // "@fathym/eac-licensing/steward/plugins": "../eac-licensing/src/steward/plugins/.exports.ts",
     "@fathym/ioc": "jsr:@fathym/ioc@0.0.14",
     "@nats": "npm:nats@2.29.3",
-    // "@o-industrial/common": "jsr:@o-industrial/common@0.0.351",
-    "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
-    "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
-    "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
-    "@o-industrial/common/atomic/organisms": "../open-industrial-reference-architecture/atomic/organisms/.exports.ts",
-    "@o-industrial/common/atomic/templates": "../open-industrial-reference-architecture/atomic/templates/.exports.ts",
-    "@o-industrial/common/atomic/utils": "../open-industrial-reference-architecture/atomic/utils/.exports.ts",
+    "@o-industrial/common": "jsr:@o-industrial/common@0.0.359",
+    // "@o-industrial/common/atomic/atoms": "../open-industrial-reference-architecture/atomic/atoms/.exports.ts",
+    // "@o-industrial/common/atomic/icons": "../open-industrial-reference-architecture/build/iconset/icons/.exports.ts",
+    // "@o-industrial/common/atomic/molecules": "../open-industrial-reference-architecture/atomic/molecules/.exports.ts",
+    // "@o-industrial/common/atomic/organisms": "../open-industrial-reference-architecture/atomic/organisms/.exports.ts",
+    // "@o-industrial/common/atomic/templates": "../open-industrial-reference-architecture/atomic/templates/.exports.ts",
+    // "@o-industrial/common/atomic/utils": "../open-industrial-reference-architecture/atomic/utils/.exports.ts",
 
-    "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
-    "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
-    "@o-industrial/common/secrets": "../open-industrial-reference-architecture/src/secrets/.exports.ts",
-    "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
-    "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
-    "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
+    // "@o-industrial/common/api": "../open-industrial-reference-architecture/src/api/.exports.ts",
+    // "@o-industrial/common/eac": "../open-industrial-reference-architecture/src/eac/.exports.ts",
+    // "@o-industrial/common/secrets": "../open-industrial-reference-architecture/src/secrets/.exports.ts",
+    // "@o-industrial/common/sop": "../open-industrial-reference-architecture/src/sop/.exports.ts",
+    // "@o-industrial/common/types": "../open-industrial-reference-architecture/src/types/.exports.ts",
+    // "@o-industrial/common/utils": "../open-industrial-reference-architecture/src/utils/.exports.ts",
 
-    "@o-industrial/common/flow": "../open-industrial-reference-architecture/src/flow/.exports.ts",
+    // "@o-industrial/common/flow": "../open-industrial-reference-architecture/src/flow/.exports.ts",
 
-    "@o-industrial/common/fluent": "../open-industrial-reference-architecture/src/fluent/_/.exports.ts",
-    "@o-industrial/common/fluent/connections": "../open-industrial-reference-architecture/src/fluent/connections/.exports.ts",
-    "@o-industrial/common/fluent/packs": "../open-industrial-reference-architecture/src/fluent/packs/.exports.ts",
-    "@o-industrial/common/fluent/simulators": "../open-industrial-reference-architecture/src/fluent/simulators/.exports.ts",
-    "@o-industrial/common/fluent/steps": "../open-industrial-reference-architecture/src/fluent/steps/.exports.ts",
-    "@o-industrial/common/fluent/types": "../open-industrial-reference-architecture/src/fluent/types/.exports.ts",
-    "@o-industrial/common/fluent/utils": "../open-industrial-reference-architecture/src/fluent/utils/.exports.ts",
-    "@o-industrial/common/fluent/workspaces": "../open-industrial-reference-architecture/src/fluent/workspaces/.exports.ts",
+    // "@o-industrial/common/fluent": "../open-industrial-reference-architecture/src/fluent/_/.exports.ts",
+    // "@o-industrial/common/fluent/connections": "../open-industrial-reference-architecture/src/fluent/connections/.exports.ts",
+    // "@o-industrial/common/fluent/packs": "../open-industrial-reference-architecture/src/fluent/packs/.exports.ts",
+    // "@o-industrial/common/fluent/simulators": "../open-industrial-reference-architecture/src/fluent/simulators/.exports.ts",
+    // "@o-industrial/common/fluent/steps": "../open-industrial-reference-architecture/src/fluent/steps/.exports.ts",
+    // "@o-industrial/common/fluent/types": "../open-industrial-reference-architecture/src/fluent/types/.exports.ts",
+    // "@o-industrial/common/fluent/utils": "../open-industrial-reference-architecture/src/fluent/utils/.exports.ts",
+    // "@o-industrial/common/fluent/workspaces": "../open-industrial-reference-architecture/src/fluent/workspaces/.exports.ts",
 
-    "@o-industrial/common/packs/azure-iot": "../open-industrial-reference-architecture/src/packs/azure-iot/.pack.ts",
-    "@o-industrial/common/packs/oi-core": "../open-industrial-reference-architecture/src/packs/oi-core/.pack.ts",
+    // "@o-industrial/common/packs/azure-iot": "../open-industrial-reference-architecture/src/packs/azure-iot/.pack.ts",
+    // "@o-industrial/common/packs/oi-core": "../open-industrial-reference-architecture/src/packs/oi-core/.pack.ts",
 
-    "@o-industrial/common/runtimes": "../open-industrial-reference-architecture/src/runtimes/.exports.ts",
+    // "@o-industrial/common/runtimes": "../open-industrial-reference-architecture/src/runtimes/.exports.ts",
 
     "preact": "npm:preact@10.20.1",
     "preact/hooks": "npm:preact@10.20.1/hooks",
